dist/LineScript-win64-20260616/tests/cases/compile_fail/input_bad_arity.lsc
main() -> i64 do
  declare x = input(1, 2)
  println(x)
  return 0
end
